test/errors/type-error.js
TypeError({
  name: "TypeError",
  message: "something went wrong",
  stack: "TypeError: something went wrong\n    at Object.<anonymous> (/home/hyurl/git/fron/test/errors/index.js:14:17)\n    at Module._compile (internal/modules/cjs/loader.js:736:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:747:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at tryModuleLoad (internal/modules/cjs/loader.js:568:12)\n    at Function.Module._load (internal/modules/cjs/loader.js:560:3)\n    at Module.require (internal/modules/cjs/loader.js:665:17)\n    at require (internal/modules/cjs/helpers.js:20:18)\n    at Object.<anonymous> (/home/hyurl/git/fron/test/get-types.js:13:5)\n    at Module._compile (internal/modules/cjs/loader.js:736:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:747:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at tryModuleLoad (internal/modules/cjs/loader.js:568:12)\n    at Function.Module._load (internal/modules/cjs/loader.js:560:3)\n    at Module.require (internal/modules/cjs/loader.js:665:17)\n    at require (internal/modules/cjs/helpers.js:20:18)\n    at /home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:250:27\n    at Array.forEach (<anonymous>)\n    at Mocha.loadFiles (/home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:247:14)\n    at Mocha.run (/home/hyurl/git/fron/node_modules/mocha/lib/mocha.js:576:10)\n    at Object.<anonymous> (/home/hyurl/git/fron/node_modules/mocha/bin/_mocha:637:18)\n    at Module._compile (internal/modules/cjs/loader.js:736:30)\n    at Object.Module._extensions..js (internal/modules/cjs/loader.js:747:10)\n    at Module.load (internal/modules/cjs/loader.js:628:32)\n    at tryModuleLoad (internal/modules/cjs/loader.js:568:12)\n    at Function.Module._load (internal/modules/cjs/loader.js:560:3)\n    at Function.Module.runMain (internal/modules/cjs/loader.js:801:12)\n    at executeUserCode (internal/bootstrap/node.js:526:15)\n    at startMainThreadExecution (internal/bootstrap/node.js:439:3)"
})